--- a/trello_powerup/popup/popup.html
+++ b/trello_powerup/popup/popup.html
@@ -7,36 +7,38 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            font-size: 14px;
-            padding: 16px;
-            background-color: #f9f9f9;
+            font-size: 13px;
+            margin: 0;
+            padding: 12px;
+            background-color: #fff;
+            color: #2c2c2c;
         }
 
         label {
             display: block;
-            margin-top: 12px;
-            font-weight: bold;
-            color: #333;
+            margin-bottom: 4px;
+            font-weight: 600;
         }
 
         input,
         select {
             width: 100%;
-            padding: 6px 10px;
-            margin-top: 4px;
-            margin-bottom: 12px;
+            padding: 6px 8px;
+            margin-bottom: 10px;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 3px;
+            font-size: 13px;
             box-sizing: border-box;
         }
 
         button {
+            width: 100%;
             background-color: #0079bf;
-            color: white;
+            color: #fff;
             border: none;
-            padding: 8px 16px;
+            padding: 8px 12px;
             font-weight: bold;
-            border-radius: 4px;
+            border-radius: 3px;
             cursor: pointer;
         }
 
