--- a/trello_powerup/popup/popup.html
+++ b/trello_powerup/popup/popup.html
@@ -57,10 +57,10 @@
 
     <label>Flow:</label><br>
     <select id="flow" style="width: 95%">
-        <option value="full-process">Full process video</option>
+        <option value="full-video-process">Full process video</option>
         <option value="1.1process-audio">1.1 process audio</option>
-        <option value="1.2process-audio">1.2 process video</option>
-        <option value="2.1process-slide">2.1 process audio&slide</option>
+        <option value="1.2process-video">1.2 process video</option>
+        <option value="2.1process-audio-slide">2.1 process audio&slide</option>
         <option value="2.2process-video-from-slide">2.1 process video from Slide</option>
     </select><br><br>
     <button id="submit">Submit</button>
