--- a/trello_powerup/popup/popup.html
+++ b/trello_powerup/popup/popup.html
@@ -90,6 +90,8 @@
     <option value="1.2process-video">1.2 process video</option>
         <option value="2.1process-audio-slide">2.1 process audio&slide</option>
         <option value="2.2process-video-from-slide">2.2 process video from Slide</option>
+        <option value="3.1-process-audio-wav">3.1-process-audio-wav</option>
+        <option value="3.2.full-video-process-wav">Full-video-process-wav</option>
     </select>
   <button id="submit">Submit</button>
 
