update trello power up.

--- a/trello_powerup/popup/popup.html
+++ b/trello_powerup/popup/popup.html
@@ -90,9 +90,11 @@
     <option value="1.2process-video">Process video</option>
     <option value="2.1process-audio-slide">2.1 process audio&slide</option>
     <option value="2.2process-video-from-slide">2.2 process video from Slide</option>
-    <option value="3.1-process-audio-wav">3.1-process-audio-wav</option>
-    <option value="3.2.full-video-process-wav">Full-video-process-wav</option>
+<!--    <option value="3.1-process-audio-wav">3.1-process-audio-wav</option>-->
+<!--    <option value="3.2.full-video-process-wav">Full-video-process-wav</option>-->
     <option value="01-generate-slides">generate-slides-after-process-audio</option>
+    <option value="4.1-process-audio-&-gen-slide">4.1-process-audio-&-gen-slide</option>
+    <option value="4.2-process-timing-json">4.2-process-timing-json-video</option>
   </select>
   <button id="submit">Submit</button>
 
