--- a/trello_powerup/popup/popup.html
+++ b/trello_powerup/popup/popup.html
@@ -100,8 +100,8 @@
     <option value="01-generate-slides">generate-slides-after-process-audio</option>
     <option value="4.1-process-audio-&-gen-slide">4.1-process-audio-&-gen-slide</option>
     <option value="4.2-process-timing-json">4.2-process-timing-json-video</option>
-    <option value="5.1process-audio.yml">5.1process-audio-transcript</option>
-    <option value="5.2process-video-with-transcript.yml">5.2process-video-with-transcript</option>
+    <option value="5.1process-audio">5.1process-audio-transcript</option>
+    <option value="5.2process-video-with-transcript">5.2process-video-with-transcript</option>
   </select>
   <button id="submit">Submit</button>
 
